[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/Box/Up_script.gd" type="Script" id=1]
[ext_resource path="res://assets/box/Upm2.png" type="Texture" id=2]
[ext_resource path="res://assets/box/Upm1.png" type="Texture" id=3]
[ext_resource path="res://assets/box/Upm5.png" type="Texture" id=4]
[ext_resource path="res://assets/box/Upm6.png" type="Texture" id=5]
[ext_resource path="res://assets/box/Upm3.png" type="Texture" id=6]
[ext_resource path="res://assets/box/Upm4.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 21 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Up" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
frame = 1
playing = true

[connection signal="body_entered" from="." to="." method="_on_Up_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Up_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Up_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Up_mouse_exited"]
